# simple-safe

./: CHANGELOG.md  LICENSE  README.md  devenv.nix  main.py  pyproject.toml  safe  safe.py
scripts/: extract-privkey.py  privkey2keyfile.py
src/safe/: abi.py  characters.py  cli.py  console.py  option.py  safe.py  ui.py  util.py  workflows.py
src/simple_safe/: __init__.py  abi.py  auth.py  chain.py  chaindata.py  click.py  console.py  constants.py  models.py  option.py  params.py  safe.py  types.py  util.py  validation.py  workflows.py
src/simple_safe/docs/: README.md
test/: alice.key  bob.key  test.sh  test_abi.py  test_precompute.py
tests/: test_abi.py
typings/trezorlib/: client.pyi
