[project]
name = "simple-safe"
version = "0.1.1"
description = "A simple & decentralized CLI for Safe accounts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.2.1",
  "click-option-group>=0.5.7",
  "devtools>=0.12.2",
  "pydantic>=2.11.4",
  "rich>=14.0.0",
  "safe-eth-py>=7.3.0",
]

[project.scripts]
safe = "simple_safe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.0"]
