[project]
name = "simple-safe"
version = "0.1.3"
description = "A simple Web3-native CLI for Safe accounts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.8",
  "click-option-group>=0.5.7",
  "devtools>=0.12.2",
  "platformdirs>=4.3.8",
  "pydantic>=2.11.4",
  "requests>=2.32.4",
  "rich>=14.0.0",
  "safe-eth-py>=7.3.0",
  "tomli-w>=1.2.0",
  "trezor[ethereum]>=0.13.10",
]

[project.scripts]
safe = "simple_safe.safe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.0", "ruff>=0.12.2", "tuna>=0.5.11"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.uv]
python-preference = "only-managed"
